# SCALES-DRP

./: .gitignore  CODEOWNERS  README.html  README.rst  changelog.txt  environment.yml  pyproject.toml  readme  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: installation_issue.yml
KCWI_DRP-master/: setup.cfg
chi/: main_nnls_script.py  nnls_cython_module.pyx  readme  setup.py
conda_build_files/: meta.yaml
data_scales_drp/: scales_lr.proc  target.txt  target.txt_ingest
docs/source/: Configuration_Parameters.rst  Data_Products.rst  Installation.rst  Mode_of_Pipelines.rst  Primitives.rst  Quick_Start.rst  Sky Subtraction.rst  Support.rst  Updating Documentation.rst  Updating_Documentation.rst  Versions.rst  calib_products.rst  conf.py  index.rst  installing.rst  quick_start.rst
scalesdrp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scalesdrp/calib/: fname.txt
scalesdrp/configs/: .scales.cfg.swp  .scales_calib.cfg.swp  framework.cfg  logger.cfg  scales.cfg  scales_calib.cfg  scales_koarti.cfg  scales_quicklook.cfg
scalesdrp/core/: geometric.py  matplot_plotting.py  scales_correct_extin.py  scales_get_std.py  scales_pkg_resources.py  scales_plotting.py  scales_proctab.py
scalesdrp/pipelines/: scales_calib_pipeline.py  scales_pipeline.py  scales_quicklook_pipeline.py
scalesdrp/primitives/: .ProcessMonochrom.py.swp  .RampFit.py.swp  .StartCalib.py.swp  .reference.py.swp  .scales_basic.py.swp  BPMCorrect.py  CalibFilePrimitives.py  CentroidEstimate.py  CorrectGain.py  CubeWCS.py  FlagSaturation.py  RampFit.py  (+26 more)
(+23 files in other folders)
