[tool.poetry]
name = "scalesdrp"
version = "1.0.1"
description = "SCALES Data Reduction Pipeline"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    "A. Unni",
    "S. Sallum",
    "M. Brodheim",
    "M. Brown"
]
homepage = "https://github.com/Keck-DataReductionPipelines/SCALES_DRP.git"
packages = [{ include = "scalesdrp" }]
include = [
    "scalesdrp/configs/*.cfg",
    "scalesdrp/data/*",
    "scalesdrp/data/extin/*",
    "scalesdrp/data/stds/*"
]

[tool.poetry.dependencies]
python           = ">=3.12"
scikit-image     = ">=0.24,<1.0"
astropy          = ">=6.1.3,<6.2.0"
astroscrappy     = ">=1.1.0,<1.2.0"
ccdproc          = ">=2.4.2,<2.5.0"
numpy            = "==1.26.4"
scipy            = ">=1.14.1,<1.15.0"
pyerfa           = ">=2.0.1.5,<3.0.0.0"
psutil           = ">=5.7.0,<5.8.0"
pytest           = ">=5.4.1,<5.5.0"
keckdrpframework = "1.0"
requests         = ">=2.32.5,<3.0.0"
pandas           = ">=1.3.5,<3.0.0"
matplotlib       = ">=3.9.2,<3.10.0"
ref_index        = ">=1.0,<2.0"
pyregion         = ">=2.0,<3.0"

[tool.poetry.scripts]
reduce_scales    = "scalesdrp.scripts.reduce_scales:main"
scales_calib     = "scalesdrp.scripts.scales_calib:main"
scales_quicklook = "scalesdrp.scripts.scales_quicklook:main"
start_scales_rti = "scalesdrp.scripts.scales_rti:main"

[build-system]
requires      = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
